# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  spec.yaml  sqlx-data.json
.github/workflows/: audit.yaml  ci.yaml  merge.yaml
migrations/: 20220403180838_create_subscriptions.sql  20220410133356_add_subscriptions_status.sql  20220410212230_create_subscription_tokens.sql  20220508132054_create_users.sql
scripts/: init_db.sh  init_redis.sh  update-app.sh
src/: app.rs  auth.rs  config.rs  email_client.rs  error.rs  lib.rs  main.rs  request_tracing.rs  server.rs  session.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscriber_status.rs
src/routes/: health.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  mod.rs
src/routes/home/: index.html  mod.rs
src/routes/login/: index.html  mod.rs
src/telemetry/: mod.rs  requests.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs
tests/api/subscriptions/: confirm.rs
