[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.0"
axum-sqlx-tx = { version = "0.3.0", features = ["postgres"] }
chrono = "0.4.19"
envy = "0.4.2"
hyper = "0.14.18"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }

[features]

[dev-dependencies]
reqwest = "0.11.10"
