[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.0"
axum-sqlx-tx = { version = "0.3.0", features = ["postgres"] }
envy = "0.4.2"
hyper = "0.14.18"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "time", "uuid"], default-features = false }
time = "0.2.27"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
uuid = { version = "0.8.2", features = ["v4"] }

[features]

[dev-dependencies]
reqwest = "0.11.10"
