[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.0"
axum-sqlx-tx = { version = "0.3.0", features = ["postgres"] }
envy = "0.4.2"
eyre = "0.6.8"
futures = "0.3.21"
hyper = "0.14.18"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "time", "uuid"], default-features = false }
time = "0.2.27"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = "0.3.10"
unicode-segmentation = "1.9.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = "0.14.0"

[features]

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.8.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0.79"
wiremock = "0.5.12"
